--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,13 +20,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
       with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
+        java-version: '11'
+        distribution: 'adopt'
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
